// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget Header render should change toggler label is collapsed is falsy 1`] = `
<header class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <button data-test="widget-header-toggler" class="widget-header-toggler">
      Show less
    </button>
  </section>
  <spinner-stub size="24"></spinner-stub>
</header>
`;

exports[`Widget Header render should correctly render 1`] = `
<header class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <button data-test="widget-header-toggler" class="widget-header-toggler">
      Show more
    </button>
  </section>
  <spinner-stub size="24"></spinner-stub>
</header>
`;
